force-app/main/default/objects/Community_Registration__c/Community_Registration__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>All settings related to the Registration Process for the Community.</description>
    <label>Community Registration</label>
</CustomObject>