force-app/main/default/objects/Community_Registration__c/fields/Community_Standard_ProfileID__c.field-meta.xml
<CustomField>
    <fullName>Community_Standard_ProfileID__c</fullName>
    <description>Represents the ID of the Profile assigned to User&#39;s that have indicated they would like to be part of the Community during the Registration Process.</description>
    <inlineHelpText>Represents the ID of the Profile assigned to User&#39;s that have indicated they would like to be part of the Community during the Registration Process.</inlineHelpText>
    <label>Community Standard ProfileID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>