force-app/main/default/objects/Community_Registration__c/fields/Disable_Interest__c.field-meta.xml
<CustomField>
    <fullName>Disable_Interest__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When selected, the Registration process will NOT include the Interests registration page.</description>
    <inlineHelpText>When selected, the Registration process will NOT include the Interests registration page.</inlineHelpText>
    <label>Disable Interest</label>
    <type>Checkbox</type>
</CustomField>