force-app/main/default/objects/Community_Registration__c/fields/Disable_Picture_Upload__c.field-meta.xml
<CustomField>
    <fullName>Disable_Picture_Upload__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When selected, the Registration process will NOT include the Profile Picture page.</description>
    <inlineHelpText>When selected, the Registration process will NOT include the Profile Picture page.</inlineHelpText>
    <label>Disable Picture Upload</label>
    <type>Checkbox</type>
</CustomField>