force-app/main/default/objects/Community_Registration__c/fields/Disable_Registration__c.field-meta.xml
<CustomField>
    <fullName>Disable_Registration__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When selected, the Registration process will be completely disabled and the User will land on the Default Home page upon Login.</description>
    <inlineHelpText>When selected, the Registration process will be completely disabled and the User will land on the Default Home page upon Login.</inlineHelpText>
    <label>Disable Registration</label>
    <type>Checkbox</type>
</CustomField>