force-app/main/default/objects/Community_Registration__c/fields/Disable_T_C__c.field-meta.xml
<CustomField>
    <fullName>Disable_T_C__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When selected, the Registration process will NOT include the Terms &amp; Conditions page.</description>
    <inlineHelpText>When selected, the Registration process will NOT include the Terms &amp; Conditions page.</inlineHelpText>
    <label>Disable T&amp;C</label>
    <type>Checkbox</type>
</CustomField>