force-app/main/default/objects/Community_Registration__c/fields/T_C_Published_Current_Date__c.field-meta.xml
<CustomField>
    <fullName>T_C_Published_Current_Date__c</fullName>
    <description>Represents when the last approved Terms &amp; Conditions document was published in the Community.  If a User accepted their T&amp;C before this date, they will be required to review and accept the Terms and Conditions again.</description>
    <inlineHelpText>Represents when the last approved Terms &amp; Conditions document was published in the Community.  If a User accepted their T&amp;C before this date, they will be required to review and accept the Terms and Conditions again.</inlineHelpText>
    <label>T&amp;C Published Current Date</label>
    <type>DateTime</type>
</CustomField>